# URP_Sirar

./: README.md  launch.sh
easy_handeye2_ws/: .gitignore  .gitmodules  README.md
easy_handeye2_ws/src/aruco_detector/: package.xml  setup.py
easy_handeye2_ws/src/aruco_detector/aruco_detector/: __init__.py  detect_vis_node.py
easy_handeye2_ws/src/aruco_detector/launch/: aruco_detect.launch.py
easy_handeye2_ws/src/easy_handeye2/: tex.txt
