<?xml version="1.0"?>
<?xml-model
        href="http://download.ros.org/schema/package_format3.xsd"
        schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>aruco_detector</name>
    <version>1.0.0</version>
    <description>
        ArUco marker detection and pose estimation ROS2 node for hand-eye calibration.
        Supports ArUco PnP and depth-based pose estimation methods with RealSense cameras.
    </description>
    <maintainer email="benreillyz@github.com">BenreillyZ</maintainer>
    <author email="benreillyz@github.com">BenreillyZ</author>
    <license>MIT</license>

    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>python3-opencv</exec_depend>
    <exec_depend>python3-numpy</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
